--- a/project html/CoursesStyle.css
+++ b/project html/CoursesStyle.css
@@ -152,6 +152,11 @@ body {
   border-radius: 30px;
   border: none;
   cursor: pointer;
+  transition: background-color 0.3s, color 0.3s;
+}
+
+.start-btn:hover {
+  background-color: rgba(255, 255, 255, 0.8);
 }
 
 /* -------------------- Footer -------------------- */
@@ -162,5 +167,6 @@ footer {
   color: #888;
   font-size: 14px;
 }
+
 
 
