--- a/project html/memberStyle.css
+++ b/project html/memberStyle.css
@@ -161,6 +161,7 @@ body {
 }
 
 .btn-join {
+  display: inline-block;
   position: relative;
   z-index: 10;
   margin-top: 70px;
@@ -174,7 +175,7 @@ body {
 }
 
 .btn-join:hover {
-  background-color: rgba(255, 255, 255, 0.9);
+  background-color: rgba(255, 255, 255, 0.8);
 }
 
 .btn-join-text {
@@ -405,4 +406,5 @@ body {
   .header {
     padding: 0 104px;
   }
+
 }
